Use amazon prime

--- a/public/html/dashboard.html
+++ b/public/html/dashboard.html
@@ -44,7 +44,7 @@
                                 <div class="selection-block">
                                     <button class="button mt-4" id="autoFill">AutoFill</button>
                                 </div>
-                                <label id="text">test</label>
+                                <label id="text"></label>
                             </div>
                         </div>
                     </div>
